@@ -1,12 +1,12 @@
 ;;
 ;; test configuration file
-;; $Id: test.conf,v 1.3 2004/01/29 07:19:18 tahara Exp $
+;; $Id: test.conf,v 1.4 2004/02/02 09:15:22 tahara Exp $
 
 (make <kahua-config>
   :sockbase "unix:_tmp"
   :working-directory "_work"
   :repository "./_cvs"
-  :userconf-file "testuser.conf"
+  :userconf-file "user.conf"
   )
 
 ;; Local variables:
